name:           witchs-cauldron
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Paul Kasko
data-files:     README.md
license:        GPL
copyright:      2014

executable witchs-cauldron
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

